feat: add basic page layout

--- a/index.html
+++ b/index.html
@@ -5,9 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/ico.png" type="image/x-icon">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Animation</title>
 </head>
 <body>
-    
+    <header>
+        <h1 class="header_visually-hidden">Animation task</h1>
+    </header>
+    <main>
+        <div class="content__wrapper">
+            <h2>Задачи на работу с анимацией на CSS</h2>
+            <p><a href="http://old.code.mu/tasks/css/rabota-s-animaciej-na-css.html" target="_blank">Примеры выполненных задач</a></p>
+            <div class="content">
+                <section>
+                    <h3>2 Бесконечное движение</h3>
+                    <p></p>
+                </section>
+                <section>
+                    <h3>3 Смена фона</h3>
+                    <p></p>
+                </section>
+                <section>
+                    <h3>4 Движение по квадрату</h3>
+                    <p></p>
+                </section>
+                <section>
+                    <h3>6 Движение туда-сюда</h3>
+                    <p></p>
+                </section>
+                <section>
+                    <h3>9 Индикатор</h3>
+                    <p></p>
+                </section>
+                <section>
+                    <h3>11 Пауза</h3>
+                    <p></p>
+                </section>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
