feat: add common styles

--- a/index.html
+++ b/index.html
@@ -18,27 +18,27 @@
             <p><a href="http://old.code.mu/tasks/css/rabota-s-animaciej-na-css.html" target="_blank">Примеры выполненных задач</a></p>
             <div class="content">
                 <section>
-                    <h3>2 Бесконечное движение</h3>
+                    <h3>2) Бесконечное движение</h3>
                     <p></p>
                 </section>
                 <section>
-                    <h3>3 Смена фона</h3>
+                    <h3>3) Смена фона</h3>
                     <p></p>
                 </section>
                 <section>
-                    <h3>4 Движение по квадрату</h3>
+                    <h3>4) Движение по квадрату</h3>
                     <p></p>
                 </section>
                 <section>
-                    <h3>6 Движение туда-сюда</h3>
+                    <h3>6) Движение туда-сюда</h3>
                     <p></p>
                 </section>
                 <section>
-                    <h3>9 Индикатор</h3>
+                    <h3>9) Индикатор</h3>
                     <p></p>
                 </section>
                 <section>
-                    <h3>11 Пауза</h3>
+                    <h3>11) Пауза</h3>
                     <p></p>
                 </section>
             </div>
