feat: implement animation tasks

--- a/index.html
+++ b/index.html
@@ -10,38 +10,51 @@
 </head>
 <body>
     <header>
-        <h1 class="header_visually-hidden">Animation task</h1>
+        <h1 class="header_visually-hidden">Animation</h1>
     </header>
     <main>
         <div class="content__wrapper">
             <h2>Задачи на работу с анимацией на CSS</h2>
+            <section>
+                <h3>2) Бесконечное движение</h3>
+                <div class="box">
+                    <div class="square square_animated2"></div>
+                </div>
+            </section>
+            <section>
+                <h3>3) Смена фона</h3>
+                <div class="box">
+                    <div class="big-square big-square_animated3"></div>
+                </div>
+            </section>
+            <section>
+                <h3>4) Движение по квадрату</h3>
+                <div class="box box_fourth">
+                    <div class="square square_animated4"></div>
+                </div>
+            </section>
+            <section>
+                <h3>6) Движение туда-сюда</h3>
+                <div class="box">
+                    <div class="square square_animated6"></div>
+                </div>
+            </section>
+            <section>
+                <h3>9) Индикатор</h3>
+                <div class="box">
+                    <div class="wrap">
+                        <div class="rectangle rectangle_animated9"></div>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <h3>11) Пауза</h3>
+                <div class="box">
+                    <div class="hoverme">Наведи на меня мышь</div>
+                    <div class="block block_animated11"></div>
+                </div>
+            </section>
             <p><a href="http://old.code.mu/tasks/css/rabota-s-animaciej-na-css.html" target="_blank">Примеры выполненных задач</a></p>
-            <div class="content">
-                <section>
-                    <h3>2) Бесконечное движение</h3>
-                    <p></p>
-                </section>
-                <section>
-                    <h3>3) Смена фона</h3>
-                    <p></p>
-                </section>
-                <section>
-                    <h3>4) Движение по квадрату</h3>
-                    <p></p>
-                </section>
-                <section>
-                    <h3>6) Движение туда-сюда</h3>
-                    <p></p>
-                </section>
-                <section>
-                    <h3>9) Индикатор</h3>
-                    <p></p>
-                </section>
-                <section>
-                    <h3>11) Пауза</h3>
-                    <p></p>
-                </section>
-            </div>
         </div>
     </main>
 </body>
